--- a/index.html
+++ b/index.html
@@ -304,12 +304,42 @@
 			<div class="inlineblock text-center show">
 				<!--collection-->
 				<ul class="list-unstyled">
-					<li class="imgitem"><div></div><img src="img/projects/1.jpg" alt="" class="img-responsive"></li>
-					<li class="imgitem"><div></div><img src="img/projects/2.jpg" alt="" class="img-responsive"></li>
-					<li class="imgitem"><div></div><img src="img/projects/3.jpg" alt="" class="img-responsive"></li>
-					<li class="imgitem"><div></div><img src="img/projects/4.jpg" alt="" class="img-responsive"></li>
-					<li class="imgitem"><div></div><img src="img/projects/5.jpg" alt="" class="img-responsive"></li>
-					<li class="imgitem"><div></div><img src="img/projects/6.jpg" alt="" class="img-responsive"></li>
+					<li class="imgitem">
+						<a href="">
+							<div></div>
+							<img src="img/projects/1.jpg" alt="" class="img-responsive">
+						</a>
+					</li>
+					<li class="imgitem">
+						<a href="">
+							<div></div>
+							<img src="img/projects/2.jpg" alt="" class="img-responsive">
+						</a>
+					</li>
+					<li class="imgitem">
+						<a href="">
+							<div></div>
+							<img src="img/projects/3.jpg" alt="" class="img-responsive">
+						</a>
+					</li>
+					<li class="imgitem">
+						<a href="">
+							<div></div>
+							<img src="img/projects/4.jpg" alt="" class="img-responsive">
+						</a>
+					</li>
+					<li class="imgitem">
+						<a href="">
+							<div></div>
+							<img src="img/projects/5.jpg" alt="" class="img-responsive">
+						</a>
+					</li>
+					<li class="imgitem">
+						<a href="">
+							<div></div>
+							<img src="img/projects/6.jpg" alt="" class="img-responsive">
+						</a>
+					</li>
 				</ul>
 			</div>
 		</div>
