--- a/index.html
+++ b/index.html
@@ -2,21 +2,20 @@
 <html lang="en">
 
 <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="self introdution">
+	<meta http-equiv="content-type" content="text/html;charset=utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta http-equiv="X-UA-Compatible" content="IE=Edge">
+	<meta name="description" content="self introdution">
     <meta name="author" content="lglong519">
 	<link rel="icon" href="img/music.png" type="image/x-ico"/>
     <title>个人首页</title>
-
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet" type="text/css">
-
     <!-- Fonts 图标样式-->
     <link href="font-awesome/css/font-awesome.css" rel="stylesheet" type="text/css">
 	<link href="css/animate.css" rel="stylesheet" />
 	<!-- Squad theme CSS -->
-	<link href="css/styele.css" rel="stylesheet">
+	<link href="css/style.css" rel="stylesheet">
 	<link href="css/default_clr.css" rel="stylesheet">
 
 </head>
@@ -64,20 +63,14 @@
 	
 	    <canvas id="canvas"></canvas>
 	    <div class="page-scroll wow bounceInDown" data-wow-delay="0.6s">
-		    <img src="img/portrait.jpg" alt="" class="img-circle">
+		    <a href="#information"><img src="img/portrait.jpg" alt="avatar" class="img-circle"></a>
 	    </div>
-	    <div class="slogan " >
+	    <div class="slogan" >
 			<h2 class="wow bounceInLeft" data-wow-delay="0.3s">不以物喜,不以己悲</h2>
 			<h3 class="wow bounceInDown" data-wow-delay="0.6s"><a href="#information">刘国龙</a></h3>
 		    <h4 class="wow bounceInRight" data-wow-delay="0.4s">在知识的海洋里遨游,在web的星空下探索</h4>
 		</div>
-	    <!--
 
-			<a href="#service" class="btn btn-circle">
-				<i class="fa fa-angle-double-down animated"></i>
-
-			</a>
-		-->
     </section>
 	<!-- 第二块--基本信息 -->
     <section id="information" class="home-section text-center bg-light">
@@ -304,38 +297,38 @@
 			<div class="inlineblock text-center show">
 				<!--collection-->
 				<ul class="list-unstyled">
-					<li class="imgitem">
-						<a href="">
+					<li class="imgItems">
+						<a href="#">
 							<div></div>
 							<img src="img/projects/1.jpg" alt="" class="img-responsive">
 						</a>
 					</li>
-					<li class="imgitem">
-						<a href="">
+					<li class="imgItems">
+						<a href="#">
 							<div></div>
 							<img src="img/projects/2.jpg" alt="" class="img-responsive">
 						</a>
 					</li>
-					<li class="imgitem">
-						<a href="">
+					<li class="imgItems">
+						<a href="#">
 							<div></div>
 							<img src="img/projects/3.jpg" alt="" class="img-responsive">
 						</a>
 					</li>
-					<li class="imgitem">
-						<a href="">
+					<li class="imgItems">
+						<a href="#">
 							<div></div>
 							<img src="img/projects/4.jpg" alt="" class="img-responsive">
 						</a>
 					</li>
-					<li class="imgitem">
-						<a href="">
+					<li class="imgItems">
+						<a href="#">
 							<div></div>
 							<img src="img/projects/5.jpg" alt="" class="img-responsive">
 						</a>
 					</li>
-					<li class="imgitem">
-						<a href="">
+					<li class="imgItems">
+						<a href="#">
 							<div></div>
 							<img src="img/projects/6.jpg" alt="" class="img-responsive">
 						</a>
@@ -408,7 +401,6 @@
 	    </div>
     </section>
 	<!-- /简评 -->
-
 	<footer>
 		<div class="container">
 			<div class="row">
@@ -444,10 +436,7 @@
 				$(this).removeClass("in");
 			});
 		});
-
-	//var _bdhmProtocol = (("https:" == document.location.protocol) ? " https://" : " http://");
-	//document.write(unescape("%3Cscript src='" + _bdhmProtocol + "hm.baidu.com/h.js%3Fac45a0f68a119fbe4d1c4c3ac3044dbd' type='text/javascript'%3E%3C/script%3E"));
-	</script> 
+	</script>
 </body>
 
 </html>
