--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
 					</div>
 					<div class="service-desc">
 						<h5>框架</h5>
-						<p>熟练使用Jquery、Bootstrap等框架，熟悉Angular，了解zepto、react等</p>
+						<p>熟练使用Jquery、Bootstrap、Angular等框架</p>
 					</div>
                 </div>
 				</div>
@@ -312,7 +312,7 @@
 					<li class="imgItems">
 						<a href="#">
 							<div></div>
-							<img src="img/projects/3.jpg" alt="" class="img-responsive">
+							<img src="img/projects/3.jpg" alt="" class="">
 						</a>
 					</li>
 					<li class="imgItems">
